--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="layer">
                     <h3>social media app</h3>
                     <p>this app conects you to the talented people around the world
-                        Download it form palystore</p>
+                        Download it form playstore</p>
                     <a href=""><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
