--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
+                    <!-- <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i> -->
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
@@ -160,7 +160,7 @@
                     <textarea name="Message" rows="6" placeholder="your Message"></textarea>
                     <button type="submit" class="btn btn2">submit</button>
                 </form>
-                <span id="msg">hello</span>
+                
             </div>
         </div>
     </div>
