just added the social media accounts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#contact">Contact</a></li>
                     <!-- <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i> -->
                 </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+                <!-- <i class="fa-solid fa-bars" onclick="openmenu()"></i> -->
             </nav>
             <div class="header-text">
                 <!-- <p>Web developer</p> -->
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="./images/sowmya-removebg-preview.png">
+                    <img src="./images/reddychinni.png">
                 </div>
                 <div class="about-col-1">
                     <h6 class="sub-title">About Me</h6><br>
@@ -147,8 +147,8 @@
                 <p><i class="fa-solid fa-phone"></i>7997686689</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://instagram.com/sowmyareddy_2820?igshid=NzZlODBkYWE4Ng=="><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/sowmya-reddy-16521323bgit"><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     </div>
                     <a href="" class=" btn btn2">Download CV</a>
