some changes are done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 </div>
                 <div class="about-col-1">
                     <h6 class="sub-title">About Me</h6><br>
-                    <p>Hello, I'm sowmya I'm an enthusiastic person and I am very fond of learning new things.I have a solid foundation in Html and css.I am pretty interested to become a web developer
+                    <p>Hello, I'm sowmya I'm an enthusiastic person and I am very fond of learning new things.I have a solid foundation in Html and css.I am pretty interested to become a web developer I am seeking a challenging and dynamic career in the field of computer science,leveraging my 
+                        B.Tech education to develop innovative software solutions and also seeking internships or entry-level 
+                        positions to apply and further develop my technicalskills and knowledge in software development
                     
                     </p>
                         <div class="tab-titles">
