--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <!-- <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i> -->
+                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
-                <!-- <i class="fa-solid fa-bars" onclick="openmenu()"></i> -->
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <!-- <p>Web developer</p> -->
